# Enginus_Train_Game

./: .gitignore  CMakeLists.txt  Components.h  Enginus.sln  EntityComponentSystem.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GreveAlfaces.vcxproj  GreveAlfaces.vcxproj.filters  Library.h  Map.cpp  Map.h  README.md  RailwayPoint.cpp  RailwayPoint.h  RailwaySignal.cpp  RailwaySignal.h  TextureManager.cpp  TextureManager.h  TileMap.cpp  TileMap.h  Train.cpp  Train.h  main.cpp
Components/: SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
ECS/: Components.h  EntityComponentSystem.h  PositionComponent.h  SpriteComponent.h
Saved/: level_01.json
assets/levels/: level_00.json  level_01.json  level_02.json  level_stations_01.json  level_trains_01.json
source/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.h  RailwayPoint.cpp  RailwayPoint.h  RailwaySignal.cpp  RailwaySignal.h  TextureManager.cpp  TextureManager.h  TileMap.cpp  TileMap.h  Train.cpp  Train.h
source/Components/: SpriteComponent.h  TransformComponent.h
x64/Debug/: Enginus.exe.recipe  Enginus.ilk  GreveAlfaces.exe.recipe  GreveAlfaces.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Enginus.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Enginus.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/Enginus.tlog/: CL.command.1.tlog  Enginus.lastbuildstate
